# fellowship

./: .gitignore  AGENTS.md  Cargo.toml  JOURNAL.md  README.md  install.sh  manifest
.beads/: config.yaml  issues.jsonl  metadata.json
.fellowship/: config.toml
.github/workflows/: ci.yml  release.yml
agents/: architect.md  engineer.md  orchestrator.md  pm.md  recon.md
docs/: agentic-ui-demo.md
docs/plans/: agentic-ui-v1.md
src/: app.rs  beads.rs  config.rs  debug_log.rs  event.rs  gh.rs  git.rs  guard.rs  keymap.rs  layout.rs  lib.rs  main.rs  runtime.rs  surface.rs  ui.rs
src/agents/: mod.rs  orchestrator.rs  registry.rs  spawn.rs  state.rs  watcher.rs
src/panes/: gitstatus.rs  members.rs  mod.rs  status.rs  terminal.rs  workspaces.rs
