[package]
name = "fellowship"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "fellowship"
path = "src/main.rs"

[[bin]]
name = "fellowship-ctl"
path = "src/bin/fellowship-ctl.rs"

[[bin]]
name = "safe-git"
path = "src/bin/safe-git.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
portable-pty = "0.8"
vt100 = "0.15"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs", "process"] }
anyhow = "1.0.102"
thiserror = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
notify = "6"
tui-input = "0.10"
futures = "0.3"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
